--- a/WeatherWeather/app/src/main/res/layout/activity_main.xml
+++ b/WeatherWeather/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,19 @@
         app:layout_constraintStart_toEndOf="@+id/city"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="181dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="336dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weatherInfo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
