--- a/tictactoe/app/src/main/res/layout/activity_the_option.xml
+++ b/tictactoe/app/src/main/res/layout/activity_the_option.xml
@@ -16,48 +16,58 @@
         android:layout_gravity="center"
         android:layout_marginStart="124dp"
         android:layout_marginLeft="124dp"
-        android:layout_marginTop="129dp"
+        android:layout_marginTop="250dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
+        android:layout_marginBottom="36dp"
         android:text="@string/vs_friend_online"
         app:backgroundTint="#82B1FF"
+        app:layout_constraintBottom_toTopOf="@+id/vComputerButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <Button
         android:id="@+id/vPlayerButton"
         android:layout_width="70pt"
         android:layout_height="80dp"
-        android:layout_marginStart="126dp"
-        android:layout_marginLeft="126dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="122dp"
-        android:layout_marginRight="122dp"
-        android:layout_marginBottom="285dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginRight="124dp"
+        android:layout_marginBottom="250dp"
         android:gravity="center"
         android:onClick="vsPlayer"
         android:text="@string/vs_player"
         app:backgroundTint="#82B1FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vComputerButton" />
+        app:layout_constraintTop_toBottomOf="@+id/vComputerButton"
+        app:layout_constraintVertical_bias="1.0"
+        />
 
     <Button
         android:id="@+id/vComputerButton"
         android:layout_width="70pt"
         android:layout_height="80dp"
-        android:layout_marginStart="126dp"
-        android:layout_marginLeft="126dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
+        android:layout_marginBottom="36dp"
         android:gravity="center"
         android:onClick="vsComputer"
         android:text="@string/vs_computer"
         app:backgroundTint="#82B1FF"
+        app:layout_constraintBottom_toTopOf="@+id/vPlayerButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vFriendButton" />
 
