--- a/TickTacToe/app/src/main/res/layout/activity_forgot_password.xml
+++ b/TickTacToe/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,6 +32,7 @@
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="342dp"
         android:height="48dp"
+        android:onClick="forgotPassword"
         android:text="@string/reset_password"
         android:textColorHint="#223DDC"
         app:layout_constraintBottom_toBottomOf="parent"
