--- a/TickTacToe/app/src/main/res/layout/activity_create_account.xml
+++ b/TickTacToe/app/src/main/res/layout/activity_create_account.xml
@@ -4,7 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateAccount">
+    tools:context=".CreateAccount"
+    android:theme="@style/Theme.TickTacToe.NoActionBar">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.TickTacToe"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/create_account"
+        app:titleTextColor="#FFFAFA" />
 
     <EditText
         android:id="@+id/EmailAddress"
@@ -84,24 +98,19 @@
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="171dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="182dp"
-        android:layout_marginBottom="248dp"
-        android:clickable="true"
-        android:onClick="forgotPassword"
-        android:text="Forgot Password"
-        android:textColor="#386056"
+    <ProgressBar
+        android:id="@+id/createAccountProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="50dp"
+        android:theme="@style/Theme.TickTacToe"
+        android:visibility="gone"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.288" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
