--- a/TickTacToe/app/src/main/res/layout/activity_versus_computer.xml
+++ b/TickTacToe/app/src/main/res/layout/activity_versus_computer.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:theme="@style/Theme.TickTacToe.NoActionBar"
     tools:context=".VersusComputer">
 
     <TableRow
