--- a/TickTacToe/app/src/main/res/values/colors.xml
+++ b/TickTacToe/app/src/main/res/values/colors.xml
@@ -4,9 +4,11 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_500">#FF018779</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="player1Color">#FF3700B3</color>
     <color name="player2Color">#FF456F21</color>
+    <color name="menuButton">#8BC34A</color>
 </resources>
