--- a/TickTacToe/app/src/main/res/layout/activity_online_game.xml
+++ b/TickTacToe/app/src/main/res/layout/activity_online_game.xml
@@ -15,26 +15,69 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/onlineButton1"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="40pt"
                 android:layout_height="40pt"
                 android:layout_marginStart="5pt"
-                android:onClick="buttonClicked"
-                app:backgroundTint="@color/teal_200"
-                style="?android:attr/buttonBarButtonStyle" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="40pt"
-                android:layout_height="40pt"
-                android:layout_marginStart="5pt"
+                android:contentDescription="@string/button"
+                 
                 android:onClick="buttonClicked"
                 app:backgroundTint="@color/teal_200" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/onlineButton2"
                 android:layout_width="40pt"
                 android:layout_height="40pt"
+                android:layout_marginStart="5pt"
+                android:contentDescription="@string/back_to_home"
+                 
+                android:onClick="buttonClicked"
+                app:backgroundTint="@color/teal_200" />
+
+            <Button
+                android:id="@+id/onlineButton3"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginStart="5pt"
+                android:contentDescription="@string/button"
+                 
+                android:onClick="buttonClicked"
+                app:backgroundTint="@color/teal_200" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"
+            android:gravity="center">
+
+            <Button
+                 
+                android:id="@+id/onlineButton4"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginStart="5pt"
+                android:onClick="buttonClicked"
+                android:contentDescription="@string/button"
+                app:backgroundTint="@color/teal_200" />
+
+            <Button
+                 
+                android:id="@+id/onlineButton5"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:layout_marginStart="5pt"
+                android:contentDescription="@string/button"
+                android:onClick="buttonClicked"
+                app:backgroundTint="@color/teal_200" />
+
+            <Button
+                 
+                android:id="@+id/onlineButton6"
+                android:layout_width="40pt"
+                android:layout_height="40pt"
+                android:contentDescription="@string/button"
                 android:layout_marginStart="5pt"
                 android:onClick="buttonClicked"
                 app:backgroundTint="@color/teal_200" />
@@ -47,54 +90,29 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/button4"
+                 
+                android:id="@+id/onlineButton7"
                 android:layout_width="40pt"
                 android:layout_height="40pt"
                 android:layout_marginStart="5pt"
                 android:onClick="buttonClicked"
+                android:contentDescription="@string/button"
                 app:backgroundTint="@color/teal_200" />
 
             <Button
-                android:id="@+id/button5"
+                 
+                android:id="@+id/onlineButton8"
                 android:layout_width="40pt"
                 android:layout_height="40pt"
                 android:layout_marginStart="5pt"
                 android:onClick="buttonClicked"
+                android:contentDescription="@string/button"
                 app:backgroundTint="@color/teal_200" />
 
             <Button
-                android:id="@+id/button6"
-                android:layout_width="40pt"
-                android:layout_height="40pt"
-                android:layout_marginStart="5pt"
-                android:onClick="buttonClicked"
-                app:backgroundTint="@color/teal_200" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="40pt"
-                android:layout_height="40pt"
-                android:layout_marginStart="5pt"
-                android:onClick="buttonClicked"
-                app:backgroundTint="@color/teal_200" />
-
-            <Button
-                android:id="@+id/button8"
-                android:layout_width="40pt"
-                android:layout_height="40pt"
-                android:layout_marginStart="5pt"
-                android:onClick="buttonClicked"
-                app:backgroundTint="@color/teal_200" />
-
-            <Button
-                android:id="@+id/button9"
+                android:contentDescription="@string/button"
+                 
+                android:id="@+id/onlineButton9"
                 android:layout_width="40pt"
                 android:layout_height="40pt"
                 android:layout_marginStart="5pt"
